Added UIC Panel

--- a/uic/index.html
+++ b/uic/index.html
@@ -410,6 +410,286 @@ sponsors:
   </div>
 </section>
 
+<!-- Rethinking Research in the Age of AI -->
+<section
+  class="page-section container-fluid px-3 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
+  id="rethinking-research-in-the-age-of-ai"
+>
+  <hr />
+  <div class="row g-5">
+    <div class="col-12 d-flex flex-column gap-4 py-4">
+      <h2 class="text-center">
+        Panel Discussion: Rethinking Research in the Age of AI
+      </h2>
+      <h4 class="text-center">
+        Telus Convention Centre - Macleod Hall B & C <br />
+        Friday August 22, 2025 <br />9:50am - 10:50am
+      </h4>
+      <div class="fs-5">
+        <p>
+          The revolutionary advancements of AI capabilities, especially in large
+          scale generative models, advanced learning frameworks, and automated
+          data mining pipelines, is catalyzing a fundamental transformation in
+          how knowledge is produced, validated, and shared across disciplines.
+          AI is now reshaping the way we do research, from speeding up
+          literature reviews and data cleaning to inspiring new ideas and even
+          helping draft papers However, this revolution also raises critical
+          concerns about methodological transparency, reproducibility of AI
+          assisted results, and recognition of contributions in human-AI
+          collaborations. These emerging shifts demand a dedicated forum for the
+          research community to explore both the benefits and the risks of
+          embedding AI into scholarly workflows.
+          <br /><br />
+          This panel aims to brings together researchers who have integrated AI
+          into their daily research practices and responsible for guiding
+          publication processes and upholding scholarly standards. The
+          objectives are threefold:
+        </p>
+
+        <ol type="1">
+          <li>
+            Map the impact of AI on research affairs by distinguishing between
+            early-stage prototypes and fully deployed systems in tasks such as
+            manuscript drafting, data manipulation, and project resource
+            organization.
+          </li>
+          <li>
+            Assess the procedural and potential ethical challenges introduced by
+            AI tools at every stage of the research lifecycle, from conceptual
+            design and data analysis to publication, peer review, and
+            post-publication monitoring.
+          </li>
+          <li>
+            Develop institutional recommendations for embedding AI oversight,
+            training, and accountability into research processes, ensuring that
+            policies on authorship, integrity, and compliance respond to the
+            realities of AI-enhanced practices.
+          </li>
+        </ol>
+        <p>
+          Through case-study presentations, interactive tool demonstrations, and
+          guided discussions, panelists will illuminate both real world
+          successes and cautionary lessons, and further reflect on questions of
+          trust, accountability, and academic credit. <br /><br />
+          By the end of this panel, attendees will have contributed to a
+          blueprint for AI's role in scholarship—recognizing both its
+          transformative power and the responsibilities it entails. They are
+          expected to leave with practical insights on how to harness AI's speed
+          without undermining scholarly rigor, learn concrete methods to manage
+          AI risks, and a clearer understanding of promoting responsible
+          AI-driven innovation in their work. By laying this foundation, this
+          panel seeks not only to set a direction for today's AI-empowered
+          research but also to spark an ongoing conversation that will shape the
+          future of academic work.
+        </p>
+      </div>
+      <div class="row">
+        <div
+          class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4 fs-5 text-center text-sm-start"
+        >
+          <h3>Panel Chairs</h3>
+          <!-- Prof. Xiaokang Wang -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Xiaokang Wang.jpg"
+                  alt="Prof. Xiaokang Wang"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Xiaokang Wan</h5>
+              <h5 class="fw-normal">
+                School of Computer Science and Artificial Intelligence,
+                Zhengzhou University, Zhengzhou, China
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Jin Sun -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Jin Sun.jpg"
+                  alt="Prof. Jin Sun"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Jin Sun</h5>
+              <h5 class="fw-normal">
+                School of Computer Science and Engineering, Nanjing University
+                of Science and Technology, Nanjing, China
+              </h5>
+            </div>
+          </div>
+          <h3>Panelists</h3>
+          <!-- Prof. Ljiljana Trajkovic -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Ljiljana Trajkovic.png"
+                  alt="Prof. Ljiljana Trajkovic"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Ljiljana Trajkovic</h5>
+              <h5 class="fw-normal">
+                Editor-in-Chief of IEEE Transactions on Human Machine Systems
+                (THMS) <br />
+                School of Engineering Science, Simon Fraser University, Burnaby,
+                Canada
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Bin Hu -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Bin Hu.png"
+                  alt="Prof. Bin Hu"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Bin Hu</h5>
+              <h5 class="fw-normal">
+                Editor-in-Chief of IEEE Transactions on Computational Social
+                Systems (TCSS) <br />
+                School of Computer Science and Technology, Beijing Institute of
+                Technology, Bejing, China
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Man Lin -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/man.jpeg"
+                  alt="Prof. Man Lin"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Man Lin</h5>
+              <h5 class="fw-normal">
+                Computer Science Department, St. Francis Xavier University,
+                Antigonish, Canada
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Zheng Yan -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Zheng Yan.jpg"
+                  alt="Prof. Zheng Yan"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Zheng Yan</h5>
+              <h5 class="fw-normal">
+                Editor-in-Chief of Elsevier Information <br />Sciences School of
+                Cyber Engineering, Xidian University, Xian, China
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Houbing Herbert Song -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Houbing Herbert Song.jpg"
+                  alt="Prof. Houbing Herbert Song"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Houbing Herbert Song</h5>
+              <h5 class="fw-normal">
+                Editor-in-Chief of IEEE Transactions on Industrial Informatics
+                (TII) <br />
+                Department of Information Systems, University of Maryland,
+                Baltimore County, USA
+              </h5>
+            </div>
+          </div>
+          <!-- Prof. Carson Leung -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Carson Leung.jpg"
+                  alt="Prof. Carson Leung"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Carson Leung</h5>
+              <h5 class="fw-normal">
+                Faculty of Science, University of Manitoba, Winnipeg, Canada
+              </h5>
+            </div>
+          </div>
+
+          <!-- Prof. Xiaokang Zhou -->
+          <div class="row">
+            <div
+              class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+            >
+              <div class="text-center">
+                <img
+                  src="/assets/images/Prof. Xiaokang Zhou.jpg"
+                  alt="Prof. Xiaokang Zhou"
+                  class="circle-img mb-3"
+                />
+              </div>
+            </div>
+            <div class="col-md-9 col-sm-8">
+              <h5>Prof. Xiaokang Zhou</h5>
+              <h5 class="fw-normal">
+                Faculty of Business Data Science, Kansai University, Osaka,
+                Japan
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   {% include colocated-conferences.html %}
 </section>
