Updated UIC Panel

--- a/uic/index.html
+++ b/uic/index.html
@@ -35,8 +35,8 @@ sponsors:
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary" href="#submission"
-          >Submit Paper to UIC 2025</a
+        <a class="btn btn-primary" href="#rethinking-research-in-the-age-of-ai"
+          >UIC Panel Discussion</a
         >
       </div>
     </div>
