Updated UIC Panel

--- a/uic/index.html
+++ b/uic/index.html
@@ -502,7 +502,7 @@ sponsors:
               </div>
             </div>
             <div class="col-md-9 col-sm-8">
-              <h5>Prof. Xiaokang Wan</h5>
+              <h5>Prof. Xiaokang Wang</h5>
               <h5 class="fw-normal">
                 School of Computer Science and Artificial Intelligence,
                 Zhengzhou University, Zhengzhou, China
