Hide program download until final version ready

--- a/program/index.html
+++ b/program/index.html
@@ -32,13 +32,13 @@ sponsors:
       <div
         class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
       >
-        <a
-          href="/assets/files/IEEE-SWC-2025-Program-Aug7-v1.pdf"
+        <!-- <a
+          href=""
           class="btn btn-primary"
           download
         >
           <i class="bi bi-download"></i> Download Program Schedule (PDF)
-        </a>
+        </a> -->
         <a
           style="
             background: #2dacee;
