--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -964,10 +964,10 @@ sponsors:
       <div class="col-md-9 col-sm-8">
         <h4>Biography</h4>
         <p>
-          Lisa Carter is a Associate Professor at Athabasca University’s Faculty
-          of Science and Technology. She has held progressive leadership roles,
-          with the most recent as inaugural Dean for two terms. She has led
-          major initiatives such as creating state-of-the-art research and
+          Lisa Carter is an Associate Professor at Athabasca University's
+          Faculty of Science and Technology. She has held progressive leadership
+          roles, with the most recent as inaugural Dean for two terms. She has
+          led major initiatives such as creating state-of-the-art research and
           teaching labs, launching an online architecture program, and
           developing online science courses. Dedicated to advancing STEM
           outreach, she has also supported faculty and staff growth and
