--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -935,6 +935,35 @@ sponsors:
         </p>
       </div>
     </div>
+    <!-- Dr. Xiaohua Feng -->
+    <div class="row">
+      <div
+        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+      >
+        <div class="text-center">
+          <img
+            src="/assets/images/WSW - Xiaohua Feng.png"
+            alt="Tatiana Cardona Sepulveda"
+            class="circle-img mb-3"
+          />
+          <h5>Dr. Xiaohua Feng</h5>
+          <h6><i>University of Bedfordshire, United Kingdom</i></h6>
+        </div>
+      </div>
+      <div class="col-md-9 col-sm-8">
+        <h4>Biography</h4>
+        <p>
+          Dr Xiaohua Feng is a Senior Lecturer at School of Computer Science and
+          Technology with expertise in Computer Security, Networked System, AI,
+          Data Science, Computer Law and Machine Leaning/Deep Leaning; focusing
+          on Computing education and pedagogics. She has been investigating
+          machine learning models for cyber security cases several AI-driven
+          methods for comms systems. She is currently working on some projects
+          on AI driven models. Currently, Dr Feng is the Ethical Officer of
+          School of Computer Science and Technology
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 
