Updated banff group trip

--- a/index.html
+++ b/index.html
@@ -63,23 +63,10 @@ sponsors:
   class="page-section container-fluid pt-3 px-4 pb-5 mt-2 d-flex flex-column gap-3"
 >
   <div>
-    <div class="alert alert-success" role="alert">
-      Registration is now open. Early-bird deadline is <b>June 30</b>.
-      <a href="/registration/" class="alert-link">Register Now</a>
-    </div>
-    <div class="alert alert-warning" role="alert">
-      Authors: Please use the following instructions for submitting final paper
-      versions
-      <a href="/final-paper-instructions/" class="alert-link"
-        >Final Paper Instructions</a
-      >
-    </div>
-    <div class="alert alert-info" role="alert">
-      Travel grants available for IEEE Computational Intelligence Society (CIS)
-      members.
-      <a href="/travel/ieee-cis-travel-grants" class="alert-link"
-        >Learn more and apply</a
-      >
+    <div class="alert alert-danger" role="alert">
+      Unfortunately, the group trip to Banff scheduled for Saturday, August 23rd
+      has been cancelled.
+      <a href="/travel/banff-group-trip/" class="alert-link">Learn more</a>
     </div>
   </div>
   <div class="row">
@@ -884,9 +871,6 @@ sponsors:
           class="d-flex flex-sm-row gap-2 flex-column justify-content-center justify-content-sm-start"
         >
           <a href="/venue/calgary" class="btn btn-primary">Learn More</a>
-          <a href="/travel/banff-group-trip/" class="btn btn-primary"
-            >Join a Group Trip to Banff</a
-          >
         </div>
       </div>
     </div>
