--- a/program/index.html
+++ b/program/index.html
@@ -65,9 +65,10 @@ sponsors:
   </div>
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4 bg-light p-0">
+<section class="container-fluid d-flex flex-column gap-4 p-0">
   <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
-    <div class="row">
+    <hr />
+    <div class="row py-5">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
         <div class="mb-4">
           <h3 class="text-center mb-0">Schedule for IEEE SWC 2025</h3>
@@ -98,41 +99,6 @@ sponsors:
           >
             Conference planning tools
           </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-3 pb-5 py-5 d-flex flex-column gap-4">
-    <div class="row g-4">
-      <div
-        class="order-2 order-sm-1 col-sm-6 py-2 d-flex justify-content-center"
-        style="overflow: hidden"
-      >
-        <img
-          src="/assets/images/sri-gowda-pdIe9hAcaP4-unsplash.jpg"
-          class="w-100 h-100 object-fit-cover"
-        />
-      </div>
-      <div
-        class="order-1 order-sm-2 col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-center"
-      >
-        <h3 class="">
-          Saturday August 23: Explore Stunning Calgary and Its Scenic
-          Surroundings with a Trip to Banff
-        </h3>
-        <p class="fs-5">
-          Join fellow IEEE SWC 2025 participants for a group day trip to Banff
-          on Saturday, August 23. Take in breathtaking mountain views, explore
-          charming sights, and enjoy a day of networking and camaraderie.
-        </p>
-
-        <div class="d-flex flex-sm-row gap-2 flex-column">
-          <a href="/travel/banff-group-trip/" class="btn btn-primary"
-            >Join the Group Trip to Banff</a
-          >
         </div>
       </div>
     </div>
