--- a/travel/banff-group-trip/index.html
+++ b/travel/banff-group-trip/index.html
@@ -26,7 +26,7 @@ sponsors:
     <div
       class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-5 fw-bolder mt-5">Banff Group Trip</h1>
+      <h1 class="display-5 fw-bolder mt-5">Banff Group Trip (Cancelled)</h1>
       <h3>August 23, 2025</h3>
     </div>
   </div>
@@ -35,6 +35,17 @@ sponsors:
 <section
   class="page-section container-fluid px-3 pb-5 d-flex flex-column gap-2"
 >
+  <div>
+    <div class="alert alert-danger" role="alert">
+      We regret to inform you that the Banff trip scheduled as part of IEEE SWC
+      2025 has been cancelled due to unforeseen circumstances. Refunds will be
+      issued to all registered participants who have paid for the trip. We
+      sincerely apologize for any inconvenience this may cause and greatly
+      appreciate your understanding.
+      <br /><br />Thank you for your interest and enthusiasm in this event. If
+      you have any questions, please do not hesitate to contact us.
+    </div>
+  </div>
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-2">
@@ -64,13 +75,6 @@ sponsors:
         create lasting memories of Canada's natural grandeur. <br /><br />
         The detailed itinerary and pricing will be updated in the short future.
         Please continue to check for updates.
-      </p>
-      <h3>Payment</h3>
-      <p class="fs-5">
-        Sign up for the Banff day trip during your
-        <a href="/registration/">conference registration</a>, spaces are
-        limited! <br /><br />
-        <b>Cost: USD $100</b>
       </p>
     </div>
   </div>
