--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -382,18 +382,18 @@ sponsors:
         </p>
       </div>
     </div>
-    <!-- Dr. Ruhne Huang -->
+    <!-- Dr. Runhe Huang -->
     <div class="row">
       <div
         class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
       >
         <div class="text-center">
           <img
-            src="/assets/images/WSW - Ruhne Huang.png"
-            alt="Dr. Ruhne Huang"
+            src="/assets/images/WSW - Runhe Huang.png"
+            alt="Dr. Runhe Huang"
             class="circle-img mb-3"
           />
-          <h5>Dr. Ruhne Huang</h5>
+          <h5>Dr. Runhe Huang</h5>
           <h6><i>Hosei University, Japan</i></h6>
         </div>
       </div>
@@ -426,7 +426,7 @@ sponsors:
         </p>
         <h4>Biography</h4>
         <p>
-          Rhune Huang received her B.Sc. in Electronics Technology from the
+          Runhe Huang received her B.Sc. in Electronics Technology from the
           National University of Defense Technology, China, in 1982, and her
           Ph.D. in Computer Science and Mathematics from the University of the
           West of England, UK, in 1993. She is a full professor at Hosei
@@ -877,25 +877,25 @@ sponsors:
         </p>
       </div>
     </div>
-    <!-- Dr. Ruhne Huang -->
+    <!-- Dr. Runhe Huang -->
     <div class="row">
       <div
         class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
       >
         <div class="text-center">
           <img
-            src="/assets/images/WSW - Ruhne Huang.png"
-            alt="Dr. Ruhne Huang"
+            src="/assets/images/WSW - r"
+            alt="Dr. Runhe Huang"
             class="circle-img mb-3"
           />
-          <h5>Dr. Ruhne Huang</h5>
+          <h5>Dr. Runhe Huang</h5>
           <h6><i>Hosei University, Japan</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
         <h4>Biography</h4>
         <p>
-          Rhune Huang received her B.Sc. in Electronics Technology from the
+          Runhe Huang received her B.Sc. in Electronics Technology from the
           National University of Defense Technology, China, in 1982, and her
           Ph.D. in Computer Science and Mathematics from the University of the
           West of England, UK, in 1993. She is a full professor at Hosei
