--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -884,7 +884,7 @@ sponsors:
       >
         <div class="text-center">
           <img
-            src="/assets/images/WSW - r"
+            src="/assets/images/WSW - Runhe Huang.png"
             alt="Dr. Runhe Huang"
             class="circle-img mb-3"
           />
