--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -284,7 +284,7 @@ sponsors:
 
 <!-- Session 1 -->
 <section
-  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4 fs-5"
   id="wsw-presentations"
 >
   <hr />
@@ -330,6 +330,56 @@ sponsors:
           The presentations will provoke a deeper dialogue on how we can
           collectively shape AI ecosystems that prioritize fairness,
           representation, and responsible innovation.
+        </p>
+      </div>
+    </div>
+    <div>
+      <h3 class="mb-3">Words of welcome</h3>
+      <h4 class="">Introduction of Women in the Smart World</h4>
+      <h5 class="fw-medium mb-3">
+        Dr. Runhe Huang, Hosei University, Deputy Director of Hosei Library,
+        Japan
+      </h5>
+      <p class="fs-5">
+        Launched in 2024 by founding chairs Prof. Runhe Huang (Hosei University,
+        Japan) and Prof. Zhi Jin (Peking University, China), the Women in the
+        Smart World Forum was created to spotlight women’s contributions to
+        emerging technologies such as AI, IoT, and smart systems. Following its
+        successful debut, the forum returns in 2025 in Calgary, Canada, as part
+        of the IEEE Smart World Congress. The forum fosters global dialogue on
+        gender diversity, innovation, and leadership, offering a collaborative
+        platform for women across academia, industry, and policy to share
+        insights, challenges, and achievements in shaping a smarter world.
+      </p>
+    </div>
+
+    <!-- Dr. Runhe Huang -->
+    <div class="row">
+      <div
+        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+      >
+        <div class="text-center">
+          <img
+            src="/assets/images/WSW - Runhe Huang.png"
+            alt="Dr. Runhe Huang"
+            class="circle-img mb-3"
+          />
+          <h5>Dr. Runhe Huang</h5>
+          <h6>
+            <i>Hosei University, Deputy Director of Hosei Library, Japan</i>
+          </h6>
+        </div>
+      </div>
+      <div class="col-md-9 col-sm-8">
+        <h4>Biography</h4>
+        <p>
+          She received her B.Sc. in Electronics Technology from the National
+          University of Defense Technology, China, in 1982, and her Ph.D. in
+          Computer Science and Mathematics from the University of the West of
+          England, UK, in 1993. She is a full professor at Hosei University,
+          Japan since 2003. She served as the head of the Department of Computer
+          Science from 2008 to 2010 and currently holds the position of Deputy
+          Director at Hosei University Library.
         </p>
       </div>
     </div>
@@ -379,60 +429,6 @@ sponsors:
           in agriculture, health, and climate resilience. She actively
           contributes to advancing ethical AI standards in engineering and
           technology fields.
-        </p>
-      </div>
-    </div>
-    <!-- Dr. Runhe Huang -->
-    <div class="row">
-      <div
-        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-      >
-        <div class="text-center">
-          <img
-            src="/assets/images/WSW - Runhe Huang.png"
-            alt="Dr. Runhe Huang"
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Runhe Huang</h5>
-          <h6><i>Hosei University, Japan</i></h6>
-        </div>
-      </div>
-      <div class="col-md-9 col-sm-8">
-        <h4>
-          Towards Compassionate Technology: Agentic AIs for Supporting
-          Vulnerable Individuals through Human-AI Partnership
-        </h4>
-        <p>
-          As we advance toward a more connected and intelligent world, women in
-          AI and IoT are playing a critical role in shaping technologies that
-          not only innovate but also care. This talk explores how agentic
-          AIs—autonomous, context-aware systems—can be thoughtfully designed to
-          support vulnerable individuals, including the elderly, people with
-          disabilities, and those facing social or medical challenges. By
-          embedding these systems within IoT-enabled environments, we move
-          toward responsive, ethical, and inclusive solutions for real-world
-          needs. <br /><br />
-          Drawing from interdisciplinary projects led and co-led by women, this
-          presentation highlights impactful applications: an Anomaly and Fall
-          Detection System for elderly safety, a Bullying Detection and
-          Prediction System for school-based intervention, and a Gesture
-          Recognition and Text Output System that enables communication for
-          users with speech or mobility limitations. Ongoing efforts include a
-          robot-guided navigation system for visually impaired users and an
-          in-home medication support solution for independent seniors. By
-          championing diversity in tech and human-centred design, women are
-          advancing AI not just as a tool, but as a compassionate
-          partner—creating a smarter, more caring society for all.
-        </p>
-        <h4>Biography</h4>
-        <p>
-          Runhe Huang received her B.Sc. in Electronics Technology from the
-          National University of Defense Technology, China, in 1982, and her
-          Ph.D. in Computer Science and Mathematics from the University of the
-          West of England, UK, in 1993. She is a full professor at Hosei
-          University, Japan since 2003. She served as the head of the Department
-          of Computer Science from 2008 to 2010 and currently holds the position
-          of Deputy Director at Hosei University Library.
         </p>
       </div>
     </div>
@@ -643,7 +639,7 @@ sponsors:
 
 <!-- Session 2 -->
 <section
-  class="page-section container-fluid px-3 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pb-5 mt-2 d-flex flex-column gap-4 fs-5"
   id="wsw-panel-discussion"
 >
   <hr />
@@ -968,7 +964,7 @@ sponsors:
 </section>
 
 <section
-  class="page-section container-fluid px-3 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pb-5 mt-2 d-flex flex-column gap-4 fs-5"
   id="wsw-panel-discussion"
 >
   <hr />
