--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -334,10 +334,10 @@ sponsors:
       </div>
     </div>
     <div>
-      <h3 class="mb-3">Words of welcome</h3>
+      <h3 class="mb-3">Words of Welcome</h3>
       <h4 class="">Introduction of Women in the Smart World</h4>
       <h5 class="fw-medium mb-3">
-        Dr. Runhe Huang, Hosei University, Deputy Director of Hosei Library,
+        Dr. Runhe Huang, Hosei University, Deputy Director of Hosei Library,
         Japan
       </h5>
       <p class="fs-5">
