Added updated to banquet location

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ sponsors:
       has been cancelled.
       <a href="/travel/banff-group-trip/" class="alert-link">Learn more</a>
     </div>
+    <div class="alert alert-warning" role="alert">
+      Please note that the banquet location on Thursday has changed. The new
+      location is <b>Macleod Hall D, Telus Convention Center</b>.
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-8 mb-3 mb-sm-0 d-flex flex-column gap-4">
