--- a/program/index.html
+++ b/program/index.html
@@ -77,6 +77,12 @@ sponsors:
           </p>
         </div>
       </div>
+      <div class="p-0">
+        <div class="alert alert-warning mb-3" role="alert">
+          Please note that the banquet location on Thursday has changed. The new
+          location is <b>Macleod Hall D, Telus Convention Center</b>.
+        </div>
+      </div>
       <div class="card bg-white p-3">
         <div title="Whova event and conference app" id="whova-agendawidget">
           <p id="whova-loading">Loading...</p>
